--- a/index.html
+++ b/index.html
@@ -4,51 +4,75 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="img/logo_small_invert.jpg"
-    />
+    <!--Small logo-->
+    <link rel="shortcut icon" type="image/x-icon" href="img/logo_black.png" />
+    <!-- Links Bootstrap-->
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <!-- Links a google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
       rel="stylesheet"
     />
-    <title>Isabela Sarmiento</title>
+    <!-- Own CSS-->
+    <link rel="stylesheet" type="text/css" href="style.css" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Website · Isabela Sarmiento</title>
   </head>
   <body>
-    <div class="container">
-      <header>
-        <img
-          src="img/background.jpg"
-          alt="Colorfull background"
-          class="background"
-        />
-        <div class="centered">
-          <h1>
-            <div>Hi!</div>
-            <div>I'm Isabela Sarmiento</div>
-          </h1>
-          <p>Software & Electronics Engineering Student</p>
+    <div class="container-fluid">
+      <div class="row bg-image">
+        <div class="row">
+          <div class="col">
+            <img src="img/logo_black.png" alt="IS logo" class="logo" />
+          </div>
+          <div class="col-10">
+            <nav class="navbar justify-content-end">
+              <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#academics">Academics</a></li>
+                <li><a href="#extra">Extra</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
         </div>
-        <img
-          src="img/sticker.png"
-          alt="A picture of me, Isabela Sarmiento"
-          class="left"
-          id="sticker"
-        />
-      </header>
-      <nav class="top-right">
-        <ul class="secondary_font">
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Academics</a></li>
-          <li><a href="">Extra</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </nav>
+        <header>
+          <div class="row" id="home">
+            <div class="col-5 text-center">
+              <img
+                src="img/sticker.png"
+                alt="A picture of me, Isabela Sarmiento"
+                id="sticker"
+              />
+            </div>
+            <div class="col-sm v-center">
+              <div>
+                <h1>
+                  <div>Hi!</div>
+                  <div>I'm Isabela Sarmiento</div>
+                </h1>
+                <p>Software Engineering & Electronics Engineering Student</p>
+              </div>
+            </div>
+          </div>
+        </header>
+      </div>
+
+      <div class="row" id="about">
+        <h2>About</h2>
+      </div>
+      <div class="row" id="academics">
+        <h2>Academics</h2>
+      </div>
+      <div class="row" id="extra">
+        <h2>Extra</h2>
+      </div>
+      <div class="row" id="contact">
+        <h2>Contact</h2>
+      </div>
     </div>
   </body>
 </html>
