--- a/index.html
+++ b/index.html
@@ -17,27 +17,44 @@
     <!-- Own CSS-->
     <link rel="stylesheet" type="text/css" href="style.css" />
 
+    <!-- Font awesome -->
+    <script
+      src="https://kit.fontawesome.com/ab2b6b4952.js"
+      crossorigin="anonymous"
+    ></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Website · Isabela Sarmiento</title>
   </head>
   <body>
     <div class="container-fluid">
       <div class="row bg-image">
-        <div class="row">
-          <div class="col">
-            <img src="img/logo_black.png" alt="IS logo" class="logo" />
-          </div>
-          <div class="col-10">
-            <nav class="navbar justify-content-end">
-              <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#academics">Academics</a></li>
-                <li><a href="#extra">Extra</a></li>
-                <li><a href="#contact">Contact</a></li>
-              </ul>
-            </nav>
-          </div>
+        <div class="row pt-3">
+          <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+              <img src="img/logo_white.png" alt="IS logo" class="logo" />
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <i class="fas fa-bars color-white"></i>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto flex-nowrap">
+                  <li class="nav-item"><a href="#home">Home</a></li>
+                  <li class="nav-item"><a href="#about">About</a></li>
+                  <li class="nav-item"><a href="#academics">Academics</a></li>
+                  <li class="nav-item"><a href="#extra">Extra</a></li>
+                  <li class="nav-item"><a href="#contact">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         </div>
         <header>
           <div class="row" id="home">
@@ -49,7 +66,7 @@
               />
             </div>
             <div class="col-sm v-center">
-              <div>
+              <div class="font-white">
                 <h1>
                   <div>Hi!</div>
                   <div>I'm Isabela Sarmiento</div>
@@ -74,5 +91,21 @@
         <h2>Contact</h2>
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+      integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+      integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/bootstrap.js"></script>
+
+    <!-- Los que mas han servido
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    -->
   </body>
 </html>
