--- a/index.html
+++ b/index.html
@@ -57,40 +57,215 @@
           </nav>
         </div>
         <header>
-          <div class="row" id="home">
-            <div class="col-5 text-center">
+          <div class="row flex-sm-row-reverse" id="home">
+            <div class="col-sm v-center text-center pb-3">
+              <div class="font-white text-md-left">
+                <h1>
+                  <div>Hi!</div>
+                  <div>I'm Isabela Sarmiento</div>
+                </h1>
+                <p>Software Engineering & Electronics Engineering Student</p>
+                <button type="button" class="btn-simple">Contact me!</button>
+              </div>
+            </div>
+            <div class="col-5 text-center pb-3">
               <img
                 src="img/sticker.png"
                 alt="A picture of me, Isabela Sarmiento"
                 id="sticker"
               />
             </div>
-            <div class="col-sm v-center">
-              <div class="font-white">
-                <h1>
-                  <div>Hi!</div>
-                  <div>I'm Isabela Sarmiento</div>
-                </h1>
-                <p>Software Engineering & Electronics Engineering Student</p>
-              </div>
-            </div>
           </div>
         </header>
       </div>
+      <main>
+        <!-- About -->
+        <div class="row pt-5" id="about">
+          <h2 class="text-center color-pink">· About ·</h2>
+          <div class="col-8 text-justify pt-3">
+            <p class="text-justify px-5">
+              As you saw already, my name is Isabela Sarmiento. I'm currently
+              finishing my double major and my free time I enjoy
+              <strong>reading</strong> a <em>good</em> book or
+              <strong>watching</strong> a <em>good</em> TV series (good in my
+              terms is anything that has either a captivating love story,
+              amazing character development, hillarious dialogue or a gripping
+              mistery). I love spending time with my <strong>family</strong> and
+              <strong>friends</strong> and more recently with my new puppy, her
+              name is Cayena. If I have some extra time, you can catch me
+              drawing something, doing some embroidery, or practicing Karate (i
+              just started a year ago so I have a lot to learn).
+            </p>
+            <p class="text-justify px-5">
+              I am passionate about <strong>creating</strong> stuff, either
+              hardware or software. I like developing any kind of software
+              application or designing integrated circuits that can help solve a
+              problem. I am interesented in <strong>learning</strong> more abour
+              ML, AI, IoT, evolutionary algorithims, optimization,
+              automatization and electronics sistems.
+            </p>
+          </div>
+          <div class="col text-center p-0">
+            <img
+              src="img/icon.png"
+              alt="Simple drawing of myself"
+              class="icon"
+            />
+          </div>
+        </div>
 
-      <div class="row" id="about">
-        <h2>About</h2>
-      </div>
-      <div class="row" id="academics">
-        <h2>Academics</h2>
-      </div>
-      <div class="row" id="extra">
-        <h2>Extra</h2>
-      </div>
-      <div class="row" id="contact">
-        <h2>Contact</h2>
-      </div>
+        <!-- Academics -->
+
+        <div class="row pt-5" id="academics">
+          <h2 class="text-center">· Academics ·</h2>
+          <div class="row">
+            <div class="col text-center">
+              <h3 class="py-2">Education</h3>
+              <div class="row justify-content-evenly">
+                <div class="col-5 text-center">
+                  <img
+                    src="img/LDV_logo.png"
+                    alt="Leonardo Da Vinci School Logo"
+                    class="medium-image pb-3"
+                  />
+                  <p><b>Colegio Italiano Leonardo da Vinci</b></p>
+                  <div class="text-justify">
+                    From 2005 to 2017, I attended Elementary School, Middle
+                    School and High School in this institution. In my last four
+                    years I did an emphasis on Math, Phisics, Science and
+                    Informatics and learnt the basis of OOP and Java.
+                  </div>
+                </div>
+                <div class="col-5 text-center">
+                  <img
+                    src="img/Uniandes_logo.png"
+                    alt="Universidad de los Andes Logo"
+                    class="small-image pb-3"
+                  />
+                  <p><b>Universidad de los Andes</b></p>
+                  <div class="text-justify">
+                    I started to study Software Engineering in 2017, and in 2018
+                    started a double mayor with electronics engineering and a
+                    minor digree in Japanese Language and Culture. Currently
+                    endind both mayors and already finished my minor.
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col text-center px-5">
+              <h3 class="py-2">Experience</h3>
+              <div class="row justify-content-evenly">
+                <i class="fas fa-gavel fa-2x pb-2"></i>
+                <p>
+                  <b>President of School's Colombian Congress Model</b>
+                  [2016-2017]
+                </p>
+                <p>
+                  Organized and lead two commisions that discussed topics
+                  concernings the Colombian Constitution and proposed various
+                  decrees to solve problemns related to education and social
+                  injustice.
+                </p>
+
+                <i class="fas fa-graduation-cap fa-2x pb-2"></i>
+                <p><b>Teaching Asistant at Uniandes</b> [2018-2020]</p>
+                <p>
+                  Worked in 3 different courses: OOP1, Transactional Systems and
+                  Signals and Systems. My role was to give help students
+                  anwering all of their questions and give them various tutoring
+                  sessions.
+                </p>
+
+                <i class="fas fa-laptop-code fa-2x pb-2"></i>
+                <p>
+                  <b
+                    >FullStack Depelover at
+                    <a href="https://equiposarco.com/home/">EquiposArco</a></b
+                  >
+                  [Summer of 2020]
+                </p>
+                <p>
+                  Worked in a web based app development for accounting and
+                  inventory management
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row py-2 px-5 text-center">
+            <div>
+              <h3 class="pb-2">Awards</h3>
+            </div>
+            <ol>
+              <li>
+                <em>Cento e lode:</em> distinction given by the Italian Ministry
+                of University and Research for students who obtain a perfect
+                score in the Italian state exam.
+              </li>
+              <li>
+                First Place in Concurso de Inovación con TIC 2019. Competition
+                organizes by Los Andes University that awars innovative proyects
+                related by IT.
+              </li>
+            </ol>
+          </div>
+          <div class="row py-2 text-center">
+            <h3>Proyects</h3>
+            <div class="col">
+              <video
+                width="350em"
+                height="auto"
+                src="projects/IMG_2500.mp4"
+                controls
+              ></video>
+              <p><b>Accelerometer</b></p>
+              <p>
+                Using an Arduino we were able of controlling a LED Matrix and an
+                accelerometer, in order to make a led move acording to gravity
+              </p>
+            </div>
+            <div class="col">
+              <video
+                width="350em"
+                height="auto"
+                src="projects/IMG_2500.mp4"
+                controls
+              ></video>
+              <p><b>RigInvaders</b></p>
+              <p>
+                Using an Arduino, a LED Matrix and different buttons we
+                programmed a simple version of the arcade game Space Invaders.
+              </p>
+            </div>
+            <div class="col">
+              <video
+                width="350em"
+                height="auto"
+                src="projects/IMG_2500.mp4"
+                controls
+              ></video>
+              <p><b>BOU Solution</b></p>
+              <p>
+                Using an Arduino, a NFC reader and diferent tangs and Firebase
+                we where able of simultaing IoT in clothing tags and speeding up
+                in-stores payment method.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row pt-5" id="extra">
+          <h2 class="text-center">· Extra ·</h2>
+          <div class="row">
+            <div clas=""></div>
+          </div>
+        </div>
+
+        <div class="row pt-5" id="contact">
+          <h2 class="text-center">· Contact ·</h2>
+        </div>
+      </main>
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
       integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
@@ -102,10 +277,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/bootstrap.js"></script>
-
-    <!-- Los que mas han servido
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    -->
   </body>
 </html>
