--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   <p><b>Universidad de los Andes</b></p>
                   <div class="text-justify">
                     I started to study Software Engineering in 2017, and in 2018
-                    started a double mayor with electronics engineering and a
+                    started a double mayor with Electronics Engineering and a
                     minor digree in Japanese Language and Culture. Currently
                     endind both mayors and already finished my minor.
                   </div>
@@ -209,12 +209,12 @@
             </ol>
           </div>
           <div class="row py-2 text-center">
-            <h3>Proyects</h3>
+            <h3 clas="pb-5">Proyects</h3>
             <div class="col">
               <video
                 width="350em"
                 height="auto"
-                src="projects/IMG_2500.mp4"
+                src="projects/IMG_2837.mp4"
                 controls
               ></video>
               <p><b>Accelerometer</b></p>
@@ -240,7 +240,7 @@
               <video
                 width="350em"
                 height="auto"
-                src="projects/IMG_2500.mp4"
+                src="projects/IMG_4475.mp4"
                 controls
               ></video>
               <p><b>BOU Solution</b></p>
@@ -256,12 +256,179 @@
         <div class="row pt-5" id="extra">
           <h2 class="text-center">· Extra ·</h2>
           <div class="row">
-            <div clas=""></div>
+            <div class="col text-center">
+              <h3>Interests</h3>
+              <span class="word-box">Machine Learning</span>
+              <span class="word-box">Internet of Things</span>
+              <span class="word-box">Artificial Intelligence</span>
+              <span class="word-box">Algorithims</span>
+              <span class="word-box">Optimization</span>
+              <span class="word-box">Automatizacion</span>
+              <span class="word-box">Electronics</span>
+              <span class="word-box">Robotics</span>
+              <span class="word-box">Integrated Circuits</span>
+            </div>
+            <div class="col text-center">
+              <h3>Skills</h3>
+              <div class="row">
+                <div class="col">
+                  <div class="card-simple text-center p-2">
+                    <div class="text-center">
+                      <img
+                        src="skills/java.2865148b.svg"
+                        alt="java"
+                        class="skill"
+                      />
+                    </div>
+                    <div class="raiting">
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fas fa-star-half-alt fa-xs checked"></span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card-simple text-center p-2">
+                    <div class="text-center">
+                      <img
+                        src="skills/python.3e633281.svg"
+                        alt="python"
+                        class="skill"
+                      />
+                    </div>
+                    <div class="raiting">
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="far fa-star fa-xs checked"></span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card-simple text-center p-2">
+                    <div class="text-center">
+                      <img
+                        src="skills/javascript.e1e07bdd.svg"
+                        alt="java script"
+                        class="skill"
+                      />
+                    </div>
+                    <div class="raiting">
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="far fa-star fa-xs checked"></span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col">
+                  <div class="card-simple text-center p-2">
+                    <div class="text-center">
+                      <img
+                        src="skills/node-js.f9fe3b2a.svg"
+                        alt="node"
+                        class="skill"
+                      />
+                    </div>
+                    <div class="raiting">
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
+                      <span class="far fa-star fa-xs checked"></span>
+                      <span class="far fa-star fa-xs checked"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col">
+                <div class="row text-center v-center">
+                  <h3>Hobbies</h3>
+                  <div class="row v-center">
+                    <div class="col">
+                      <img
+                        src="hobbies/reading.jpeg"
+                        alt="reading"
+                        class="hobbies-h"
+                      />
+                    </div>
+                    <div class="col">
+                      <img
+                        src="hobbies/embroider.jpeg"
+                        alt="embroider"
+                        class="hobbies-v"
+                      />
+                    </div>
+                  </div>
+                  <div class="row v-center">
+                    <div class="col">
+                      <img
+                        src="hobbies/karate.jpg"
+                        alt="karate"
+                        class="hobbies-h"
+                      />
+                    </div>
+                    <div class="col">
+                      <img
+                        src="hobbies/drawing.png"
+                        alt="drawing"
+                        class="hobbies-v"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="row text-center">
+                  <h3>Languages</h3>
+                  <p>Español - C2</p>
+                  <p>English - C1</p>
+                  <p>Italiano - C1</p>
+                  <p>日本語 - B1</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
         <div class="row pt-5" id="contact">
           <h2 class="text-center">· Contact ·</h2>
+          <div class="row justify-content-evenly text-center">
+            <div class="col">
+              <a href="https://www.instagram.com/isamasar/?hl=en">
+                <img
+                  src="contact/instagram.f679e0b4.svg"
+                  alt="instagram"
+                  class="small-image"
+                />
+              </a>
+            </div>
+            <div class="col">
+              <a href="https://www.facebook.com/profile.php?id=100010776090351">
+                <img
+                  src="contact/facebook.03d81152.svg"
+                  alt="facebook"
+                  class="small-image"
+                />
+              </a>
+            </div>
+            <div class="col">
+              <a href="https://github.com/imsarmiento">
+                <img
+                  src="contact/github.6c90eb83.svg"
+                  alt="github"
+                  class="small-image"
+                />
+              </a>
+            </div>
+          </div>
         </div>
       </main>
     </div>
