--- a/index.html
+++ b/index.html
@@ -360,9 +360,10 @@
             <div class="col-12 col-lg-6 text-center">
               <article>
               <h3 class="py-5">Skills</h3>
-              <div class="row">
+              <div class="row ">
                 <div class="col">
                   <div class="card-simple text-center p-2">
+                    <div class="bottom">
                     <div class="text-center">
                       <img
                         src="skills/java.2865148b.svg"
@@ -378,9 +379,11 @@
                       <span class="fas fa-star-half-alt fa-xs checked"></span>
                     </div>
                   </div>
+                  </div>
                 </div>
                 <div class="col">
                   <div class="card-simple text-center p-2">
+                    <div class="bottom">                    
                     <div class="text-center">
                       <img
                         src="skills/python.3e633281.svg"
@@ -395,10 +398,12 @@
                       <span class="fa fa-star fa-xs checked"></span>
                       <span class="far fa-star fa-xs checked"></span>
                     </div>
+                    </div>
                   </div>
                 </div>
                 <div class="col">
                   <div class="card-simple text-center p-2">
+                    <div class="bottom">                    
                     <div class="text-center">
                       <img
                         src="skills/javascript.e1e07bdd.svg"
@@ -413,11 +418,13 @@
                       <span class="fa fa-star fa-xs checked"></span>
                       <span class="far fa-star fa-xs checked"></span>
                     </div>
+                    </div>
                   </div>
                 </div>
 
-                <div class="col">
+                <div class="col ">
                   <div class="card-simple text-center p-2">
+                  <div class=bottom>
                     <div class="text-center">
                       <img
                         src="skills/node-js.f9fe3b2a.svg"
@@ -432,6 +439,7 @@
                       <span class="far fa-star fa-xs checked"></span>
                       <span class="far fa-star fa-xs checked"></span>
                     </div>
+                  </div>
                   </div>
                 </div>
               </div>
