Cambios casi definitivos

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <header>
           <div class="row flex-sm-row-reverse" id="home">
             <div class="col-sm v-center text-center pb-3">
-              <div class="font-white text-md-left">
+              <div class="font-white text-md-start">
                 <h1>
                   <div>Hi!</div>
                   <div>I'm Isabela Sarmiento</div>
@@ -70,7 +70,7 @@
                 <a href="mailto:isamasar@hotmail.com"><button type="button" class="btn-simple" >Contact me!</button></a>
               </div>
             </div>
-            <div class="col-5 text-center pb-3">
+            <div class="col-sm-5 text-center pb-3">
               <img
                 src="img/sticker.png"
                 alt="A picture of me, Isabela Sarmiento"
@@ -108,7 +108,7 @@
                 hardware or software. I like developing any kind of software
                 application or designing integrated circuits that can help solve
                 a problem. I am interesented in <strong>learning</strong> more
-                abour ML, AI, IoT, evolutionary algorithims, optimization,
+                about ML, AI, IoT, evolutionary algorithims, optimization,
                 automatization and electronics sistems.
               </p>
             </div>
@@ -201,9 +201,9 @@
                     <p><b>Universidad de los Andes</b></p>
                     <div class="text-justify">
                       <p>
-                      I started to study <strong>Software Engineering</strong>  in 2017, and in
+                      I started to study <strong>Software Engineering</strong> in 2017 and in
                       2018 started a double mayor with <strong>Electronics Engineering</strong>
-                      and a minor digree in <strong>Japanese Language and Culture</strong>.
+                      and a minor degree in <strong>Japanese Language and Culture</strong>.
                       Currently endind both mayors and already finished my
                       minor.
                     </p>
@@ -257,7 +257,7 @@
                 </article>
               </div>
 
-            <div class="row pb-5 px-md-5 text-center">
+            <div class="row pb-5 px-md-8 text-center">
               <article>
               <div>
                 <h3 class="py-4">Awards</h3>
@@ -362,7 +362,7 @@
             <div class="col-12 col-lg-6 text-center">
               <article>
               <h3 class="py-5">Skills</h3>
-              <div class="row ">
+              <div class="row ps-2 ps-md-5">
                 <div class="col">
                   <div class="card-simple text-center p-2">
                     <div class="bottom">
@@ -423,14 +423,13 @@
                     </div>
                   </div>
                 </div>
-
-                <div class="col ">
+                <div class="col">
                   <div class="card-simple text-center p-2">
-                  <div class=bottom>
+                    <div class="bottom">                    
                     <div class="text-center">
                       <img
-                        src="skills/node-js.f9fe3b2a.svg"
-                        alt="node"
+                        src="skills/node-node-js-seeklogo.com.svg"
+                        alt="java script"
                         class="skill"
                       />
                     </div>
@@ -438,10 +437,10 @@
                       <span class="fa fa-star fa-xs checked"></span>
                       <span class="fa fa-star fa-xs checked"></span>
                       <span class="fa fa-star fa-xs checked"></span>
-                      <span class="far fa-star fa-xs checked"></span>
+                      <span class="fa fa-star fa-xs checked"></span>
                       <span class="far fa-star fa-xs checked"></span>
                     </div>
-                  </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -454,19 +453,19 @@
                   <article>
 
                   <h3 class="py-5">Hobbies</h3>
-                  <div class="row justify-content-center v-center ">
+                  <div class="row justify-content-evenly v-center ">
                     <div class="col">
                       <img
                         src="hobbies/reading.jpeg"
                         alt="reading"
-                        class="hobbies-h p-1"
+                        class="hobbies-img p-1"
                       />
                     </div>
                     <div class="col">
                       <img
                         src="hobbies/embroider.jpeg"
                         alt="embroider"
-                        class="hobbies-v p-1"
+                        class="hobbies-img p-1"
                       />
                     </div>
                   </div>
@@ -475,14 +474,14 @@
                       <img
                         src="hobbies/karate.jpg"
                         alt="karate"
-                        class="hobbies-v p-1"
+                        class="hobbies-img p-1"
                       />
                     </div>
                     <div class="col">
                       <img
-                        src="hobbies/drawing.png"
+                        src="hobbies/drawing.jpg"
                         alt="drawing"
-                        class="hobbies-h p-1"
+                        class="hobbies-img p-1"
                       />
                     </div>
                   </div>
@@ -497,7 +496,7 @@
                   <p>Español - C2</p>
                   <p>English - C1</p>
                   <p>Italiano - C1</p>
-                  <p>日本語 - B1</p>
+                  <p>日本語 - A2</p>
                   </article>
                 </div>
               </div>
