David Manosalva: Comentarios y HTML-CSS Check

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                 <h3 class="py-4">Experience</h3>
                 <div class="col">
                   <div class="row justify-content-evenly px-lg-12">
+                    <!-- Se debería reemplazar los i por em y los b por strong para que tengan semantica -->
                     <i class="fas fa-gavel fa-2x pb-2"></i>
                     <p>
                       <b>President of School's Colombian Congress Model</b>
