--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!-- El codigo tiene buena indentacion, buenas practicas y es legible -->
+<!-- Hubo una pequena correcion con la indentacion -->
+<!-- Las secciones logicas son claramente distinguibles tanto en el codigo como en el diseno -->
+<!-- La estetica es clara y consistente, en especial la paleta de colores -->
+<!-- Las clases creadas son consistentes, buenas practicas en CSS -->
+<!-- Existe una estructura de carpetas organizada -->
+<!-- Navegacion: Todos los links funcionan correctamente en la barra de navegacion -->
+<!-- Responsive: -->
+<!-- Tamano lg: Responsive y maquetacion sin errores -->
+<!-- Tamano md: En algunas ocasiones los titulos del banner se pueden colocar por detras de la foto -->
+<!-- Tamano sm: Algunas secciones (como los videos) no estan centrados en el dispositivo, tienen mas margen hacia la derecha -->
+<!-- En resumen: Muy buen trabajo!!!! -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -56,10 +68,20 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto flex-nowrap">
-                  <li class="nav-item"><a href="#home">Home</a></li>
-                  <li class="nav-item"><a href="#about">About</a></li>
-                  <li class="nav-item"><a href="#academics">Academics</a></li>
-                  <li class="nav-item"><a href="#extra">Extra</a></li>
+                  <!-- Corregir la indentacion! Los tags hijos deberian estar en la siguiente linea -->
+                  <!-- Asi queda mas legible: (esta es la correcion) -->
+                  <li class="nav-item">
+                    <a href="#home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#about">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#academics">Academics</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#extra">Extra</a>
+                  </li>
                 </ul>
               </div>
             </div>
